--- a/core/assets/admin.css
+++ b/core/assets/admin.css
@@ -1553,8 +1553,6 @@ input[type=text].layers-color-selector.wp-color-picker{
 .layers-accordions-sortable .layers-accordion-item:hover{
     border-color: #ccc;
 }
-.layers-accordions-sortable .layers-accordion-item:active{
-}
 .layers-accordions-sortable .layers-accordion-title{
     padding: 10px;
     border-top: none;
